[package]
name = "bakoel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web dan async runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Library untuk HTTP client (memanggil Supabase)
reqwest = { version = "0.12", features = ["json"] }

# Manipulasi JSON dan Tanggal
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Tambahan untuk migrasi Render: Baca .env & Atur CORS Frontend
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
